docs-archive/apache-airflow-providers-google/22.6.0/_sources/_api/airflow/providers/google/cloud/operators/gen_ai/index.rst.txt
airflow.providers.google.cloud.operators.gen_ai
===============================================

.. py:module:: airflow.providers.google.cloud.operators.gen_ai

.. autoapi-nested-parse::

   This module contains Google Gen AI operators.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.gen_ai.GenAIGenerateEmbeddingsOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGenerateContentOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAISupervisedFineTuningTrainOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAICountTokensOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAICreateCachedContentOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiCreateBatchJobOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiGetBatchJobOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiListBatchJobsOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiDeleteBatchJobOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiCancelBatchJobOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiCreateEmbeddingsBatchJobOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiUploadFileOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiGetFileOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiListFilesOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGeminiDeleteFileOperator


Module Contents
---------------

.. py:class:: GenAIGenerateEmbeddingsOperator(*, project_id, location, model, contents, config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Uses the Gemini AI Embeddings API to generate embeddings for words, phrases, sentences, and code.

   :param project_id: Required. The ID of the Google Cloud project that the
       service belongs to (templated).
   :param location: Required. The ID of the Google Cloud location that the
       service belongs to (templated).
   :param model: Required. The name of the model to use for content generation,
       which can be a text-only or multimodal model. For example, `gemini-pro` or
       `gemini-pro-vision`.
   :param contents: Optional. The contents to use for embedding.
   :param config: Optional. Configuration for embeddings.
   :param gcp_conn_id: Optional. The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional. Service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('location', 'project_id', 'impersonation_chain', 'contents', 'model', 'config', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: contents


   .. py:attribute:: config
      :value: None



   .. py:attribute:: model


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGenerateContentOperator(*, project_id, location, contents, model, generation_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Generate a model response based on given configuration. Input capabilities differ between models, including tuned models.

   :param project_id: Required. The ID of the Google Cloud project that the
       service belongs to (templated).
   :param location: Required. The ID of the Google Cloud location that the
       service belongs to (templated).
   :param model: Required. The name of the model to use for content generation,
       which can be a text-only or multimodal model. For example, `gemini-pro` or
       `gemini-pro-vision`.
   :param contents: Required. The multi-part content of a message that a user or a program
       gives to the generative model, in order to elicit a specific response.
   :param generation_config: Optional. Generation configuration settings.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('generation_config', 'location', 'project_id', 'impersonation_chain', 'contents', 'model',...



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: contents


   .. py:attribute:: generation_config
      :value: None



   .. py:attribute:: model


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAISupervisedFineTuningTrainOperator(*, project_id, location, source_model, training_dataset, tuning_job_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create a tuning job to adapt model behavior with a labeled dataset.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param source_model: Required. A pre-trained model optimized for performing natural
       language tasks such as classification, summarization, extraction, content
       creation, and ideation.
   :param training_dataset: Required. Cloud Storage URI of your training dataset. The dataset
       must be formatted as a JSONL file. For best results, provide at least 100 to 500 examples.
   :param tuning_job_config: Optional. Configuration of the Tuning job to be created.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('location', 'project_id', 'impersonation_chain', 'training_dataset', 'tuning_job_config',...



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: source_model


   .. py:attribute:: training_dataset


   .. py:attribute:: tuning_job_config
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAICountTokensOperator(*, project_id, location, contents, model, config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Use Count Tokens API to calculate the number of input tokens before sending a request to Gemini API.

   :param project_id: Required. The ID of the Google Cloud project that the
       service belongs to (templated).
   :param location: Required. The ID of the Google Cloud location that the
       service belongs to (templated).
   :param contents: Required. The multi-part content of a message that a user or a program
       gives to the generative model, in order to elicit a specific response.
   :param model: Required. Model, supporting prompts with text-only input,
       including natural language tasks, multi-turn text and code chat,
       and code generation. It can output text and code.
   :param config: Optional. Configuration for Count Tokens.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('location', 'project_id', 'impersonation_chain', 'contents', 'model', 'config', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: contents


   .. py:attribute:: model


   .. py:attribute:: config
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAICreateCachedContentOperator(*, project_id, location, model, cached_content_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create CachedContent resource to reduce the cost of requests that contain repeat content with high input token counts.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for cached content.
   :param cached_content_config: Optional. Configuration of the Cached Content.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('location', 'project_id', 'impersonation_chain', 'model', 'cached_content_config', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: model


   .. py:attribute:: cached_content_config
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiCreateBatchJobOperator(*, project_id, location, model, input_source, gemini_api_key, create_batch_job_config = None, results_folder = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, retrieve_result = False, wait_until_complete = False, polling_interval = 30, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create Batch job using Gemini Batch API. Use to generate model response for several requests.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for Batch job.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param input_source: Required. Source of requests, could be inline requests or file name.
   :param results_folder: Optional. Path to a folder on local machine where file with results will be saved.
   :param create_batch_job_config: Optional. Config for batch job creation.
   :param wait_until_complete: Optional. Await job completion.
   :param retrieve_result: Optional. Push the result to XCom. If the input_source is inline, this pushes
       the execution result. If a file name is specified, this pushes the output file path.
   :param polling_interval: Optional. The interval, in seconds, to poll the job status.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Optional. Run operator in the deferrable mode.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('location', 'project_id', 'impersonation_chain', 'model', 'create_batch_job_config',...



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: model


   .. py:attribute:: input_source


   .. py:attribute:: create_batch_job_config
      :value: None



   .. py:attribute:: gemini_api_key


   .. py:attribute:: retrieve_result
      :value: False



   .. py:attribute:: wait_until_complete
      :value: False



   .. py:attribute:: polling_interval
      :value: 30



   .. py:attribute:: results_folder
      :value: None



   .. py:attribute:: deferrable


   .. py:property:: hook


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


.. py:class:: GenAIGeminiGetBatchJobOperator(*, project_id, location, job_name, gemini_api_key, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Get Batch job using Gemini API.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for Batch job.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param job_name: Required. Name of the batch job.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'job_name', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: job_name


   .. py:attribute:: gemini_api_key


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiListBatchJobsOperator(*, project_id, location, gemini_api_key, list_batch_jobs_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Get list of Batch jobs metadata using Gemini API.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for Batch job.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'list_batch_jobs_config', 'gemini_api_key',...



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: list_batch_jobs_config
      :value: None



   .. py:attribute:: gemini_api_key


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiDeleteBatchJobOperator(*, project_id, location, job_name, gemini_api_key, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Queue a batch job for deletion using the Gemini API.

   The job will not be deleted immediately. After submitting it for deletion, it will still be available
   through GenAIGeminiListBatchJobsOperator or GenAIGeminiGetBatchJobOperator for some time.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for Batch job.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param job_name: Required. Name of the batch job.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'job_name', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: job_name


   .. py:attribute:: gemini_api_key


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiCancelBatchJobOperator(*, project_id, location, job_name, gemini_api_key, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Cancel Batch job using Gemini API.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for Batch job.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param job_name: Required. Name of the batch job.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'job_name', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: job_name


   .. py:attribute:: gemini_api_key


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiCreateEmbeddingsBatchJobOperator(*, project_id, location, model, gemini_api_key, input_source, results_folder = None, create_embeddings_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, wait_until_complete = False, retrieve_result = False, polling_interval = 30, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create embeddings Batch job using Gemini Batch API.

   Use to generate embeddings for words, phrases, sentences, and code for several requests.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for Batch job.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param input_source: Required. Source of requests, could be inline requests or file name.
   :param results_folder: Optional. Path to a folder on local machine where file with results will be saved.
   :param create_embeddings_config: Optional. Config for batch job creation.
   :param wait_until_complete: Optional. Await job completion.
   :param retrieve_result: Optional. Push the result to XCom. If the input_source is inline, this pushes
       the execution result. If a file name is specified, this pushes the output file path.
   :param polling_interval: Optional. The interval, in seconds, to poll the job status.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Optional. Run operator in the deferrable mode.


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'model', 'create_embeddings_config',...



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: model


   .. py:attribute:: input_source


   .. py:attribute:: create_embeddings_config
      :value: None



   .. py:attribute:: gemini_api_key


   .. py:attribute:: wait_until_complete
      :value: False



   .. py:attribute:: retrieve_result
      :value: False



   .. py:attribute:: polling_interval
      :value: 30



   .. py:attribute:: results_folder
      :value: None



   .. py:attribute:: deferrable


   .. py:property:: hook


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


.. py:class:: GenAIGeminiUploadFileOperator(*, project_id, location, file_path, gemini_api_key, upload_file_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Upload file to Gemini Files API.

   The Files API lets you store up to 20GB of files per project, with each file not exceeding 2GB in size.
   Supported types are audio files, images, videos, documents, and others. Files are stored for 48 hours.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param file_path: Required. Path to file on your local machine.
   :param upload_file_config: Optional. Metadata configuration for file upload.
       Defaults to display name and mime type parsed from file_path.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'file_path', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: gemini_api_key


   .. py:attribute:: file_path


   .. py:attribute:: upload_file_config
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiGetFileOperator(*, project_id, location, file_name, gemini_api_key, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Get file's metadata uploaded to Gemini Files API by using GenAIGeminiUploadFileOperator.

   The Files API lets you store up to 20GB of files per project, with each file not exceeding 2GB in size.
   Files are stored for 48 hours.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param file_name: Required. File name in Gemini Files API to get
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'file_name', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: gemini_api_key


   .. py:attribute:: file_name


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiListFilesOperator(*, project_id, location, gemini_api_key, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   List files uploaded to Gemini Files API.

   The Files API lets you store up to 20GB of files per project, with each file not exceeding 2GB in size.
   Files are stored for 48 hours.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: gemini_api_key


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGeminiDeleteFileOperator(*, project_id, location, file_name, gemini_api_key, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Delete file uploaded to Gemini Files API.

   The Files API lets you store up to 20GB of files per project, with each file not exceeding 2GB in size.
   Files are stored for 48 hours.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param gemini_api_key: Required. Key to interact with Gemini Batch API.
   :param file_name: Required. File name in Gemini Files API to delete.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'file_name', 'gemini_api_key', 'gcp_conn_id')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: file_name


   .. py:attribute:: gemini_api_key


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



